--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" >
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -27,24 +27,24 @@
             <section class="search-forms">
                 <h1>Trouvez votre hébergement pour des vacances de rêve </h1>
                 <p>En plein centre-ville ou en pleine nature</p>
-                <form id="location" action="" method="post">
+                <form id="location" method="post">
                         <i class="fa-solid fa-location-dot"></i>
-                        <input type="text" name="city" id="city" placeholder="Entrez une ville" value='Marseille, France'/>
+                        <input type="text" name="city" id="city" placeholder="Entrez une ville" value='Marseille, France'>
                         <button type="submit" > 
                             <span id="btn1"> Rechercher</span>
                             <i id="btn2" class="fa-solid fa-magnifying-glass"></i>
                         </button>
                 </form>
-                <form id="filters" action="" method="post">
+                <form id="filters" method="post">
                     <span>Filtres</span>
                     <div>
-                    <input type="checkbox" name="eco" id="eco" hidden/>
+                    <input type="checkbox" name="eco" id="eco" hidden>
                     <label for="eco"> <i class="fa-solid fa-money-bill-wave"></i>Économique</label>
-                    <input type="checkbox" name="famil" id="famil" hidden/>
+                    <input type="checkbox" name="famil" id="famil" hidden>
                     <label for="famil"> <i class="fa-solid fa-person"></i>Familial</label>
-                    <input type="checkbox" name="roman" id="roman" hidden checked/>
+                    <input type="checkbox" name="roman" id="roman" hidden checked>
                     <label for="roman"> <i class="fa-solid fa-heart"></i>Romantique</label>
-                    <input type="checkbox" name="pepit" id="pepit" hidden/>
+                    <input type="checkbox" name="pepit" id="pepit" hidden>
                     <label for="pepit"> <i class="fa-solid fa-fire"></i>Nos pépites</label>
                     </div>
                 </form>
