--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
         </header>
         <main>
-            <section class="search-forms">
+            <section class="search-container">
                 <h1>Trouvez votre hébergement pour des vacances de rêve </h1>
                 <p>En plein centre-ville ou en pleine nature</p>
                 <form id="location" method="post">
@@ -48,9 +48,12 @@
                     <label for="pepit"> <i class="fa-solid fa-fire"></i>Nos pépites</label>
                     </div>
                 </form>
-
-                <p><i class="fa-solid fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
-
+                <div class="info-container">
+                    <div class="info">
+                        <i class="fa-solid fa-info"></i>
+                    </div>
+                    <p> Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
             </section>
             <div class="hebergements-and-populaires">
                 <section id="mon_ancre" class="hebergements">
