--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </form>
                 <form id="filters" method="post">
                     <span>Filtres</span>
-                    <div>
+                    <div class="filters-container">
                     <input type="checkbox" name="eco" id="eco" hidden>
                     <label for="eco"> <i class="fa-solid fa-money-bill-wave"></i>Économique</label>
                     <input type="checkbox" name="famil" id="famil" hidden>
